--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="#FFFFFF"
-android:scrollbarAlwaysDrawHorizontalTrack="true"
-tools:context=".fragment.PerfilFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:scrollbarAlwaysDrawHorizontalTrack="true"
+    tools:context=".fragment.PerfilFragment">
 
     <TextView
         android:id="@+id/txtBoasVindas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Olá, \n"
+        android:textColor="#0F184C"
+        android:textSize="40dp"
+
         app:layout_constraintBottom_toTopOf="@+id/btnEditarPerfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-
-        android:text="Bem-vind@, \n"
-        android:textSize="40dp"
-        android:textColor="#0F184C"
-        android:gravity="center"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnEditarPerfil"
-        android:layout_width="271dp"
-        android:layout_height="55dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
         android:layout_marginTop="200dp"
         android:backgroundTint="#0F184C"
         android:text="Editar perfil"
@@ -38,47 +38,45 @@ tools:context=".fragment.PerfilFragment">
 
     <Button
         android:id="@+id/btnNotificacoes"
-        android:layout_width="271dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="#0F184C"
         android:text="Notificações"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:cornerRadius="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btnEditarPerfil"
+        app:layout_constraintStart_toStartOf="@+id/btnEditarPerfil"
         app:layout_constraintTop_toBottomOf="@+id/btnEditarPerfil" />
 
     <Button
-        android:id="@+id/btnSair"
-        android:layout_width="120dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="28dp"
-        android:backgroundTint="#0F184C"
-        android:text="Sair"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:cornerRadius="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnNotificacoes" />
-
-    <Button
         android:id="@+id/btnConfiguracao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="#0F184C"
         android:text="Configurações"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:cornerRadius="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSair"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/btnNotificacoes"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="@+id/btnNotificacoes"
+        app:layout_constraintTop_toBottomOf="@+id/btnNotificacoes" />
+
+    <Button
+        android:id="@+id/btnSair"
+        android:layout_width="125dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:backgroundTint="#0F184C"
+        android:text="Sair"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:cornerRadius="4dp"
+        app:layout_constraintEnd_toEndOf="@+id/btnConfiguracao"
+        app:layout_constraintStart_toStartOf="@+id/btnConfiguracao"
+        app:layout_constraintTop_toBottomOf="@+id/btnConfiguracao" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
